# LspCpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LSP_3_18_COVERAGE.md  LspCpp.cpp  LspCpp.vcxproj  LspCpp.vcxproj.filters  Makefile  README.md  README_zh.md  TcpServerExample.cpp  WebsocketExample.cpp  optional.h  packages.config  vcpkg.json
.github/workflows/: build-lsp-linux.yaml  build-lsp-windows.yaml  pull-req-precheck.yaml
LibLsp/JsonRpc/: Cancellation.cpp  Condition.h  Endpoint.h  (+29 more)
docs/: README.md
example/: StdIOClientExample.cpp  StdIOServerExample.cpp  TcpServerExample.cpp  WebsocketExample.cpp
examples/: MinimalStdIOServerExample.cpp  ProcessClientExample.cpp  StdIOClientExample.cpp  StdIOServerExample.cpp  TcpServerExample.cpp  WebsocketExample.cpp
sct/: ApduModelTest.cpp  ApduModelTest.h  DownLoadCapFile.h  JcDebug.h  SCTConfig.h  sct.cpp  sct.h
tests/: api_compat_tests.cpp  clangd_fixture_tests.cpp  endpoint_serializer_tests.cpp  infrastructure_tests.cpp  jsonrpc_tests.cpp  language_session_tests.cpp  lsp_3_16_17_tests.cpp  lsp_3_18_tests.cpp  lsp_client_test_helpers.h  lsp_types_roundtrip_tests.cpp  perf_smoke_tests.cpp  protocol_json_handler_tests.cpp  protocol_test_helpers.h  remote_endpoint_tests.cpp  stream_message_producer_tests.cpp  tcp_write_queue_tests.cpp  test_helpers.h  text_document_sync_tests.cpp  uri_path_mapping_tests.cpp  websocket_write_queue_tests.cpp  working_files_tests.cpp
tests/cmake/consumer_project/: CMakeLists.txt  main.cpp
tools/: check_lsp_metamodel_coverage.py  lsp-metamodel-allowlist.json  lspgen.py
(+282 files in other folders)
